# qcs

./: .gitignore  README.md  pyproject.toml  requirements.txt  tmp.qc
data/: gf_mult4.qasm
docs/: circuit-extraction.md  random_1.csv  random_10.csv
example/: 01-tutorial.ipynb  02-hadamard-gadgetization.ipynb  03-t-count-optimization.ipynb  ZXvsPhasePolynomial.ipynb  clifford.py  cmp.ipynb  cnot.py  exp.py  fastTodd.ipynb  gf_mult.py  gf_mult2.py  linearFunctionCnotSynthesis.py  moduleSynthesis.ipynb  runGFMultExperiment.py  t_comparison.py  t_optimization.py  topt.py  zx-vs-pp.py
qcs/: __init__.py  circuitExtract.py  fastTODD.py  patternRewriting.py  simulator.py  stabilizerTableau.py  tDig.py  thirdOrderPolynomial.py  tohpe.py  visualization.py
qcs/core/: CMakeLists.txt  __init__.py  interface.py
qcs/core/api/: interface.hpp
qcs/core/bindings/: algorithmBinding.cpp  bitVectorBinding.cpp  interface.cpp  quantumCircuitBinding.cpp  rowMajorTableauBinding.cpp
qcs/core/include/: binding.hpp  bitvector.hpp  circuit.hpp  columnMajorTableau.hpp  gadgetization.hpp  gate.hpp  hadamardOptimization.hpp  pauliOptimization.hpp  pauliProduct.hpp  phasePolynomial.hpp  rowMajorTableau.hpp  tOptimizer.hpp  tableau.hpp  toffoliOptimization.hpp
qcs/core/src/: binding.cpp  bitvector.cpp  circuit.cpp  columnMajorTableau.cpp  gadgetization.cpp  gate.cpp  hadamardOptimization.cpp  pauliOptimization.cpp  pauliProduct.cpp  phasePolynomial.cpp  rowMajorTableau.cpp  tOptimizer.cpp  tableau.cpp  toffoliOptimization.cpp  tohpe.cpp
src/: circuitExtract.py  cliffordAlgebra.py  config.py  cutEnumeration.py  esopLibrary.py  logicNetwork.py  (+6 more)
(+87 files in other folders)
